--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,18 @@ profile.cov
 go.work
 go.work.sum
 
+.idea/
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+
+
 # env file
 .env
 
