--- a/example/client/Dockerfile
+++ b/example/client/Dockerfile
@@ -6,12 +6,12 @@ COPY . .
 WORKDIR /go/src/github.com/CanobbioE/poly-route/example/client
 
 
-RUN CGO_ENABLED=0 go build -o test-client -ldflags "-w -s"
+RUN CGO_ENABLED=0 go build -o example-client -ldflags "-w -s"
 
 FROM gcr.io/distroless/base-debian12:nonroot
 
-COPY --from=build-env --chown=nonroot /go/src/github.com/CanobbioE/poly-route/example/client/test-client /app/test-client
+COPY --from=build-env --chown=nonroot /go/src/github.com/CanobbioE/poly-route/example/client/example-client /app/example-client
 COPY --from=build-env --chown=nonroot /go/src/github.com/CanobbioE/poly-route/example/config.yaml /app/config.yaml
 
 USER 65532
-ENTRYPOINT ["/app/test-client"]
+ENTRYPOINT ["/app/example-client"]
