--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,30 +1,25 @@
 http:
   listen: "8888"
   destinations:
-    - entrypoint: "/"
-      mapping:
-        euw1: "http://localhost:8085"
-        use1: "http://localhost:8081"
+    /:
+      euw1: "http://localhost:8085"
+      use1: "http://localhost:8081"
 
 grpc:
   listen: "9999"
   destinations:
-    - entrypoint: "/mockserver.v1.MockService/Invoke"
-      mapping:
-        euw1: "localhost:9095"
-        use1: "localhost:9091"
-    - entrypoint: "/mockserver.v1.MockService/BiDirectionalStream"
-      mapping:
-        euw1: "localhost:9095"
-        use1: "localhost:9091"
-    - entrypoint: "/mockserver.v1.MockService/ClientStream"
-      mapping:
-        euw1: "localhost:9095"
-        use1: "localhost:9091"
-    - entrypoint: "/mockserver.v1.MockService/ServerStream"
-      mapping:
-        euw1: "localhost:9095"
-        use1: "localhost:9091"
+    /mockserver.v1.MockService/Invoke:
+      euw1: "localhost:9095"
+      use1: "localhost:9091"
+    /mockserver.v1.MockService/BiDirectionalStream:
+      euw1: "localhost:9095"
+      use1: "localhost:9091"
+    /mockserver.v1.MockService/ClientStream:
+      euw1: "localhost:9095"
+      use1: "localhost:9091"
+    /mockserver.v1.MockService/ServerStream:
+      euw1: "localhost:9095"
+      use1: "localhost:9091"
 
 
 region_retriever:
